--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-native-web": "^0.19.8",
     "react-router": "^6.15.0",
